# soil-id-algorithm

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LandPKS_munsell_rgb_lab.csv  Makefile  README.md  SoilID2API.R  SoilID_Project_Notes.docx  SoilID_Project_Notes.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-no-gdal.txt  requirements.txt  setup.py  soilid2plumber.R  test_output.txt  ~$ilID_Project_Notes.docx
.github/: dependabot.yml
.github/workflows/: api-snapshot-check.yml  build.yml  check-commits.yml  weekly-api-snapshot.yml
API/: README.md  app.py  config.py  flask-cors  requirements.txt  twistedApp.py
API/api/: __init__.py
API/gce/: startup-script.sh
API/util/: common.py
API/v3/: routes.py
Data/: LandPKS_munsell_rgb_lab.csv
NRCS_SDA_Demos/: Leaflet_SSURGO_Poly_WMS.Rmd  Leaflet_SSURGO_Poly_WMS.nb.html
R_code/: SoilID2API.R  base_functions_SoilID_US_API.R
mysql_database/: soilID_mysql_database_schema.txt
python_code/: README_API.md  local_functions_SoilID_v3.py  multi_sim_triangular.py  soilIDModel_Global_v3.py  soilIDModel_US_v3.py  soilIDModel_v3.py
requirements/: base.in  dev.in
scripts/: README.md  rebuild.sh  wrb_descriptions_sync.py
soil_id/: Global_SoilID_Code_Debugging.ipynb  README_API.md  __init__.py  color.py  config.py  db.py  global_soil.py  rank_utils.py  services.py  soil_sim.py  us_soil.py  utils.py
soil_id/tests/: test_color.py  test_find_region.py  test_munsell_consistency.py  utils.py
soil_id/tests/global/: generate_bulk_test_results.py  global_pedon_test_dataset.csv  (+2 more)
(+53 files in other folders)
